<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgScrapImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:src="@drawable/scrap_items_logo" />

    <EditText
        android:id="@+id/etEnterYourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEnterEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_e_mail_address"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEnterMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="phone"
        android:hint="@string/enter_mobile_number"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_up" />
</LinearLayout>