<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:id="@+id/llContent"
        android:background="#ffffff"
        android:weightSum="6">
        <ImageView
            android:layout_weight="1.5"
            android:id="@+id/imgScrapImageNext"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_weight="3.3"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtScrapNameNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_book"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtScrapTypeNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtScrapNameNext"
                android:text="@string/name_of_the_author"
                android:padding="8dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txtScrapPriceNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/rs_299"
                android:padding="8dp"
                android:layout_below="@id/txtScrapTypeNext"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#357a38"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/txtScrapRatingNext"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:textColor="#ffca28"
            android:text="@string/_4_5"
            android:drawablePadding="4dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_ratings">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notes"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✅ The prices may vary with fluctuation in the scrap market."
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✅ We don't deal in toughened glass, wooden items, fabrics, ceramics and vehicle scrap."
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✅ Prices may be different for bulk pickups. Call us at +91-8595358613 to get a quote for bulk pickup."
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_it_works"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="100dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/how_it_works"
            android:layout_margin="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/green"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sell your recyclables online with Scrap Items"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/green"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paper - Plastics - Metals - Appliances"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btnRegister"

            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="Register"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
