<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgScrapImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:src="@drawable/scrap_items_logo" />

    <EditText
        android:id="@+id/etEnterYourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEnterEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_e_mail_address"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEnterMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="phone"
        android:hint="@string/enter_mobile_number"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="Pick And Drop Facility"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_margin="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Required"/>

        <RadioButton
            android:id="@+id/radioOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Required"/>

    </RadioGroup>
    <EditText
        android:id="@+id/etEnterHomeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        android:hint="Enter Your Home Address"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/etExpectedScrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Enter Scrap Names to be sold"
        android:layout_margin="20dp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Register" />
</LinearLayout>

</ScrollView>